syntax = "proto3";
package proto;

option go_package = ".";

message KeyVal {
    string key = 1;
    bytes value = 2;
}

message Empty {

}

message Key {
    string key = 1;
}

message Value {
    bytes value = 1;
}

service AddService {
    rpc Get (Key) returns (Value);
    rpc Set (KeyVal) returns (Empty);
}

service AddUserClientService{
    rpc GetUserByID (Key) returns (Value);
    rpc SetUser (KeyVal) returns (Empty);
}


